check_output_v13.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
error[E0432]: unresolved import `windows::Win32::UI::Pnp`
  --> crates\engine\src\hid\windows.rs:35:25
   |
35 | use windows::Win32::UI::Pnp::{
   |                         ^^^ could not find `Pnp` in `UI`

warning: unused import: `AvRevertMmThreadCharacteristics`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 1 previous error; 1 warning emitted
